--- a/Learn_Game/Learn_Game.vcxproj
+++ b/Learn_Game/Learn_Game.vcxproj
@@ -23,32 +23,32 @@
     <ProjectGuid>{2E147CB9-2A11-4A8E-B0C5-94C9A8D64A01}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>LearnGame</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -152,19 +152,22 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\local\SFML-2.5.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\local\SFML-2.5.1\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>sfml-audio.lib;sfml-audio-s.lib;sfml-graphics.lib;sfml-main.lib;sfml-system.lib;sfml-window.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\Tibia_Clone\Project1\Game.cpp" />
+    <ClCompile Include="..\..\Tibia_Clone\Project1\GameState.cpp" />
     <ClCompile Include="Animation.cpp" />
     <ClCompile Include="AnimationFrame.cpp" />
     <ClCompile Include="Arkanoid_AddPointBuff.cpp" />
@@ -190,6 +193,22 @@
     <ClCompile Include="Mario_Level.cpp" />
     <ClCompile Include="Mario_MarioGameObiect.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
+    <ClCompile Include="TibiaAnimation.cpp" />
+    <ClCompile Include="TibiaAnimationController.cpp" />
+    <ClCompile Include="TibiaCameraController.cpp" />
+    <ClCompile Include="TibiaCloneGameState.cpp" />
+    <ClCompile Include="TibiaCreature.cpp" />
+    <ClCompile Include="TibiaFrame.cpp" />
+    <ClCompile Include="TibiaGameObiect.cpp" />
+    <ClCompile Include="TibiaGlobalAnimationTimer.cpp" />
+    <ClCompile Include="TibiaMapCell.cpp" />
+    <ClCompile Include="TibiaPlayer.cpp" />
+    <ClCompile Include="TibiaRat.cpp" />
+    <ClCompile Include="TibiaResourceHandler.cpp" />
+    <ClCompile Include="TibiaResoureManager.cpp" />
+    <ClCompile Include="TibiaTGCGame.cpp" />
+    <ClCompile Include="TibiaUtilityTools.cpp" />
+    <ClCompile Include="TibiaWorld.cpp" />
     <ClCompile Include="TicTacToc_Cell.cpp" />
     <ClCompile Include="CollisionChecker.cpp" />
     <ClCompile Include="Game.cpp" />
@@ -234,6 +253,23 @@
     <ClInclude Include="Mario_GameObiect.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="ResourceManager.h" />
+    <ClInclude Include="TibiaAnimation.h" />
+    <ClInclude Include="TibiaAnimationController.h" />
+    <ClInclude Include="TibiaCameraController.h" />
+    <ClInclude Include="TibiaCloneGameState.h" />
+    <ClInclude Include="TibiaCreature.h" />
+    <ClInclude Include="TibiaEnums.h" />
+    <ClInclude Include="TibiaFrame.h" />
+    <ClInclude Include="TibiaGameObiect.h" />
+    <ClInclude Include="TibiaGlobalAnimationTimer.h" />
+    <ClInclude Include="TibiaMapCell.h" />
+    <ClInclude Include="TibiaPlayer.h" />
+    <ClInclude Include="TibiaRat.h" />
+    <ClInclude Include="TibiaResourceHandler.h" />
+    <ClInclude Include="TibiaResoureManager.h" />
+    <ClInclude Include="TibiaTGCGame.h" />
+    <ClInclude Include="TibiaUtilityTools.h" />
+    <ClInclude Include="TibiaWorld.h" />
     <ClInclude Include="TicTacToc_Cell.h" />
     <ClInclude Include="CollisionChecker.h" />
     <ClInclude Include="Enums.h" />
