moving loading texture from scr to XML, moving loading monsters from SCR to XML, in future create Fabric clas returning obiect created from subpart (monsterPrefab, texture etc)

--- a/Learn_Game/Learn_Game.vcxproj
+++ b/Learn_Game/Learn_Game.vcxproj
@@ -185,6 +185,10 @@
     <ClCompile Include="Arkanoid_BuffDrop.cpp" />
     <ClCompile Include="Brick.cpp" />
     <ClCompile Include="Button.cpp" />
+    <ClCompile Include="TibiaTextureLoader.cpp" />
+    <ClCompile Include="TibiaCreatureController.cpp" />
+    <ClCompile Include="TibiaMonsterLoader.cpp" />
+    <ClCompile Include="TibiaParticle.cpp" />
     <ClCompile Include="TibiaCombat.cpp" />
     <ClCompile Include="Mario_GumbaGameObiect.cpp" />
     <ClCompile Include="Mario_LevelController.cpp" />
@@ -203,12 +207,13 @@
     <ClCompile Include="TibiaGlobalAnimationTimer.cpp" />
     <ClCompile Include="TibiaMapCell.cpp" />
     <ClCompile Include="TibiaPlayer.cpp" />
-    <ClCompile Include="TibiaRat.cpp" />
     <ClCompile Include="TibiaResourceHandler.cpp" />
     <ClCompile Include="TibiaResoureManager.cpp" />
+    <ClCompile Include="TibiaSimpleLoader.cpp" />
     <ClCompile Include="TibiaTGCGame.cpp" />
     <ClCompile Include="TibiaUtilityTools.cpp" />
     <ClCompile Include="TibiaWorld.cpp" />
+    <ClCompile Include="TibiaXMLLoader.cpp" />
     <ClCompile Include="TicTacToc_Cell.cpp" />
     <ClCompile Include="CollisionChecker.cpp" />
     <ClCompile Include="Game.cpp" />
@@ -245,6 +250,11 @@
     <ClInclude Include="Arkanoid_BuffDrop.h" />
     <ClInclude Include="Brick.h" />
     <ClInclude Include="Button.h" />
+    <ClInclude Include="TibiaTextureLoader.h" />
+    <ClInclude Include="TibiaCreatureController.h" />
+    <ClInclude Include="TibiaXMLLoader.h" />
+    <ClInclude Include="TibiaMonsterLoader.h" />
+    <ClInclude Include="TibiaParticle.h" />
     <ClInclude Include="TibiaCombat.h" />
     <ClInclude Include="Mario_GumbaGameObiect.h" />
     <ClInclude Include="Mario_LevelController.h" />
@@ -265,9 +275,9 @@
     <ClInclude Include="TibiaGlobalAnimationTimer.h" />
     <ClInclude Include="TibiaMapCell.h" />
     <ClInclude Include="TibiaPlayer.h" />
-    <ClInclude Include="TibiaRat.h" />
     <ClInclude Include="TibiaResourceHandler.h" />
     <ClInclude Include="TibiaResoureManager.h" />
+    <ClInclude Include="TibiaSimpleLoader.h" />
     <ClInclude Include="TibiaTGCGame.h" />
     <ClInclude Include="TibiaUtilityTools.h" />
     <ClInclude Include="TibiaWorld.h" />
