add simple factory

--- a/Learn_Game/Learn_Game.vcxproj
+++ b/Learn_Game/Learn_Game.vcxproj
@@ -185,6 +185,7 @@
     <ClCompile Include="Arkanoid_BuffDrop.cpp" />
     <ClCompile Include="Brick.cpp" />
     <ClCompile Include="Button.cpp" />
+    <ClCompile Include="TibiaFactory.cpp" />
     <ClCompile Include="TibiaTextureLoader.cpp" />
     <ClCompile Include="TibiaCreatureController.cpp" />
     <ClCompile Include="TibiaMonsterLoader.cpp" />
@@ -250,6 +251,7 @@
     <ClInclude Include="Arkanoid_BuffDrop.h" />
     <ClInclude Include="Brick.h" />
     <ClInclude Include="Button.h" />
+    <ClInclude Include="TibiaFactory.h" />
     <ClInclude Include="TibiaTextureLoader.h" />
     <ClInclude Include="TibiaCreatureController.h" />
     <ClInclude Include="TibiaXMLLoader.h" />
